# rag-template

./: .dockerignore  .editorconfig  .env.template  .gitignore  .gitmodules  ADR-vision-embedding-rollout.md  DebugDockerfile  Dockerfile  ENHANCED_LLM_SUMMARY.md  Makefile  README-MONOREPO.md  README.md  Tiltfile  api-generator.sh  build-and-test.yml  conftest.py  eslint.config.mjs  example_replacement_chat_chain.py  index.yaml  main.py  package-lock.json  package.json  pyproject.toml  rag-3.3.0.tgz  rag-4.0.0.tgz  rag-4.1.0.tgz  rag-4.2.0.tgz  release.config.js  test_enhanced_llm_config.py  update-submodules.sh  use_case_container.py
document-extractor/: .openapi-generator-ignore  Dockerfile  Makefile  main.py  openapi.yaml  pyproject.toml
document-extractor/src/openapi_server/: container.py  main.py
document-extractor/src/openapi_server/apis/: extractor_api.py  extractor_api_base.py
document-extractor/src/openapi_server/document_parser/: file_type.py  general_extractor.py  information_extractor.py  information_piece.py  ms_docs_extractor.py  pdf_extractor.py  xml_extractor.py
document-extractor/src/openapi_server/document_parser/table_coverters/: dataframe2markdown.py  (+1 more)
document-extractor/src/openapi_server/file_services/: file_service.py  s3_service.py
document-extractor/src/openapi_server/impl/: extractor_api_impl.py
document-extractor/src/openapi_server/models/: extraction_request.py  information_piece.py  information_type.py  meta_information_piece.py
document-extractor/src/openapi_server/settings/: pdf_extractor_settings.py  s3_settings.py
libs/: .dockerignore  .gitignore  .openapi-generator-ignore  CONTRIBUTING.md  Dockerfile  Dockerfile.base  Makefile  README.md  api-generator.sh  openapi-generator.sh  openapi.yaml  package-lock.json  package.json  pyproject.toml
libs/.azure/: build-and-test.yaml
libs/.github/: PULL_REQUEST_TEMPLATE.md
libs/.github/workflows/: lint-and-test.yml  semantic-release.yml
libs/admin-api-lib/: .gitignore  .openapi-generator-ignore  README.md  openapi.yaml  pyproject.toml  pytest.ini
libs/admin-api-lib/src/: .openapi-generator-ignore
libs/admin-api-lib/src/admin_api_lib/: dependency_container.py  main.py
libs/admin-api-lib/tests/: admin_api_test.py  comma_separated_bool_list_test.py  comma_separated_str_list_test.py  default_file_uploader_test.py  default_source_uploader_test.py  langchain_summarizer_test.py  page_summary_enhancer_test.py  semantic_text_chunker_test.py
libs/admin-api-lib/tests/settings/: confluence_settings_test.py
libs/extractor-api-lib/: .gitignore  .openapi-generator-ignore  README.md  openapi.yaml  pyproject.toml
libs/extractor-api-lib/src/extractor_api_lib/: container.py  dependency_container.py  main.py
libs/extractor-api-lib/tests/: confluence_extractor_test.py  conftest.py  docling_extractor_test.py  epub_extractor_test.py  general_file_extractor_test.py  image_extractor_test.py  markitdown_extractor_test.py  modality_contract_test.py  pdf_extractor_test.py  sitemap_extractor_test.py  sitemap_extractor_utils_test.py  test_general_file_extractor.py
libs/extractor-api-lib/tests/test_data/: LoremIpsum.epub  generate_test_pdfs.py  plain.txt  sample.adoc  sample.docx  sample.html  sample.md  sample.pptx  sample.txt  sample.xlsx  sample.xml
libs/rag-core-api/: .gitignore  .openapi-generator-ignore  Makefile  README.md  openapi-generator.sh  openapi.yaml  pyproject.toml
libs/rag-core-api/src/rag_core_api/: dependency_container.py  main.py
libs/rag-core-api/tests/: composite_retriever_test.py  language_detection_chain_test.py  rag_api_test.py  utils_language_parsing_test.py
libs/rag-core-api/tests/mocks/: __init__.py  mock_environment_variables.py  mock_langfuse_manager.py  mock_logging_directory.py  mock_reranker.py  mock_retriever_quark.py  mock_sparse_embeddings.py  mock_vector_db.py
libs/rag-core-api/tests/settings/: fake_embedder_settings.py
libs/rag-core-lib/: .dockerignore  README.md  pyproject.toml
libs/rag-core-lib/tests/: chat_model_provider_test.py  dummy6_test.py  retry_decorator_test.py
libs/scripts/: poetry-update.sh
libs/src/openapi_server/apis/: rag_api.py  rag_api_base.py
libs/src/openapi_server/models/: chat_history.py  chat_history_message.py  chat_request.py  chat_response.py  chat_role.py  content_type.py  delete_request.py  key_value_pair.py  search_request.py  search_response.py  source_document.py  source_documents.py  upload_source_document.py
libs/src/rag_core/: container.py  dependency_container.py  main.py  security_api.py
libs/src/rag_core/api_endpoints/: chat_chain.py  searcher.py  source_documents_remover.py  source_documents_uploader.py
libs/src/rag_core/apis/: rag_api.py  rag_api_base.py
libs/src/rag_core/embeddings/: embedder.py
libs/src/rag_core/impl/: rag_api.py
libs/src/rag_core/models/: chat_history.py  chat_history_message.py  chat_request.py  chat_response.py  chat_role.py  delete_request.py  key_value_pair.py  search_request.py  search_response.py  source_document.py  source_documents.py  upload_source_document.py
libs/src/rag_core/retriever/: retriever.py
libs/src/rag_core/tracers/: traced_chain.py  tracer_service.py
libs/src/rag_core/vector_databases/: vector_database.py
libs/tests/: dummy_test.py
rag-backend/: Dockerfile  Makefile  README.md  container.py  example_replacement_chat_chain.py  main.py  pyproject.toml  use_case_container.py
rag-backend/tests/: dummy2_test.py
services/admin-backend/: Dockerfile  Dockerfile.dev  README.md  main.py  pyproject.toml
services/admin-backend/tests/: dummy1_test.py
services/document-extractor/: .gitignore  Dockerfile  Dockerfile.dev  README.md  main.py  pyproject.toml
services/document-extractor/tests/: dummy2_test.py
services/mcp-server/: Dockerfile  Dockerfile.dev  Makefile  README.md  api-generator.sh  pyproject.toml
services/mcp-server/src/: __init__.py  docstring_system.py  main.py  rag_mcp_server.py
services/mcp-server/src/settings/: logging_settings.py  mcp_settings.py
services/mcp-server/tests/: __init__.py  docstring_system_test.py  test_basic.py
(+919 files in other folders)
