[tool.flake8]
exclude= [".eggs", "./src/openapi_server/models/*", ".git", ".hg", ".mypy_cache", ".tox", ".venv", ".devcontainer", "venv", "_build", "buck-out", "build", "dist"]
statistics = true
show-source = false
max-complexity = 10
max-annotations-complexity = 3
docstring-convent = 'numpy'
max-line-length = 120
ignore = ["E203", "W503", "E704"]
inline-quotes = '"'
docstring-quotes = '"""'
multiline-quotes = '"""'
dictionaries = ["en_US", "python", "technical", "pandas"]
ban-relative-imports = true

[tool.black]
line-length = 120
exclude = """
/(
  |  .eggs
  |  .git
  |  .hg
  |  .mypy_cache
  |  .nox
  |  .pants.d
  |  .tox
  |  .venv
  |  _build
  |  buck-out
  |  build
  |  dist
  |  node_modules
  |  venv
)/
"""

[tool.isort]
profile = "black"
skip = ['.eggs', '.git', '.hg', '.mypy_cache', '.nox', '.pants.d', '.tox', '.venv', '_build', 'buck-out', 'build', 'dist', 'node_modules', 'venv']
skip_gitignore = true

[tool.pylint]
max-line-length = 120

[tool.poetry]
name = "pdfextractor_server"
version = "0.0.0"
description = "Extracts the content of pdf  documents."
authors = ["mmmake GmbH"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
wheel = "^0.42.0"
botocore = "^1.34.45"
fasttext = {git = "https://github.com/cfculhane/fastText", rev = "main"}
pytesseract = "^0.3.10"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
dependency-injector = "^4.41.0"
pydantic-settings = "^2.2.1"
boto3 = "^1.34.47"
debugpy = "^1.8.1"
python-multipart = "^0.0.9"
oauthlib = "^3.2.2"
requests-oauthlib = "^2.0.0"
pdfplumber = "0.11.0"
opencv-python = "4.9.0.80"
pdf2image = "1.17.0"
datasets = "^2.18.0"
pandas = "^2.2.2"
tabulate = "^0.9.0"
lxml = "^5.2.1"
partial = "^1.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.0.1"
black = "^24.2.0"
flake8-black = "^0.3.6"
flake8-pyproject = "^1.2.3"
coverage = "^7.5.4"


[tool.poetry.group.tests.dependencies]
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
