[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "extractor-api-lib"
version = "v3.4.0"
description = "Extracts the content of documents, websites, etc and maps it to a common format."
authors = [
    "STACKIT GmbH & Co. KG <data-ai@stackit.cloud>",
]
maintainers = [
    "Andreas Klos <andreas.klos@stackit.cloud>",
]
packages = [{ include = "extractor_api_lib", from = "src" }]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/stackitcloud/rag-template"
homepage = "https://pypi.org/project/extractor-api-lib"

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.flake8]
exclude = [".eggs", "./src/extractor_api_lib/models/*", ".git", ".hg", ".mypy_cache", ".tox", ".venv", ".devcontainer", "venv", "_build", "buck-out", "build", "dist", "**/__init__.py", "tests/test_data/generate_test_pdfs.py"]
statistics = true
show-source = false
max-complexity = 10
max-annotations-complexity = 3
docstring-convent = 'numpy'
max-line-length = 120
ignore = ["E203", "W503", "E704"]
inline-quotes = '"'
docstring-quotes = '"""'
multiline-quotes = '"""'
dictionaries = ["en_US", "python", "technical", "pandas"]
ban-relative-imports = true
per-file-ignores = """
  ./src/extractor_api_lib/apis/extractor_api.py: B008,WOT001,
  ./src/extractor_api_lib/impl/extractor_api_impl.py: B008,
  ./src/extractor_api_lib/container.py: CCE002,CCE001,
  ./src/extractor_api_lib/apis/extractor_api_base.py: WOT001,
  ./tests/*: S101,E501,
  **/__init__.py: D107,
"""

[tool.black]
line-length = 120
exclude = """
/(
  |  .eggs
  |  .git
  |  .hg
  |  .mypy_cache
  |  .nox
  |  .pants.d
  |  .tox
  |  .venv
  |  _build
  |  buck-out
  |  build
  |  dist
  |  node_modules
  |  venv
)/
"""

[tool.isort]
profile = "black"
skip = ['.eggs', '.git', '.hg', '.mypy_cache', '.nox', '.pants.d', '.tox', '.venv', '_build', 'buck-out', 'build', 'dist', 'node_modules', 'venv']
skip_gitignore = true
known_local_folder = ["extractor_api_lib", "rag_core_lib"]

[tool.pylint]
max-line-length = 120

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
wheel = "^0.45.1"
botocore = "^1.38.10"
fasttext = "^0.9.3"
pytesseract = "^0.3.10"
fastapi = "^0.121.2"
uvicorn = "^0.37.0"
dependency-injector = "^4.46.0"
pydantic-settings = "^2.9.1"
boto3 = "^1.38.10"
python-multipart = "^0.0.20"
oauthlib = "^3.2.2"
requests-oauthlib = "^2.0.0"
pdfplumber = "0.11.7"
tesserocr = "^2.9.1"
opencv-python-headless = "4.12.0.88"
pdf2image = "1.17.0"
datasets = "^3.5.1"
pandas = "^2.2.2"
tabulate = "^0.9.0"
lxml = "^5.4.0"
partial = "^1.0"
pyyaml = "^6.0.2"
numpy = "^2.2.5"
docx2txt = "^0.9"
unstructured = {extras = ["docx", "pptx"], version = "0.18.15"}
html5lib = "^1.1"
langchain-community = "^0.4.1"
atlassian-python-api = "^4.0.3"
markdownify = "^1.1.0"
langchain-core = "^1.0.7"
camelot-py = {extras = ["cv"], version = "^1.0.0"}
fake-useragent = "^2.2.0"
pypdfium2 = "4.30.0"
pypandoc-binary = "^1.15"
starlette = ">=0.49.1"
markitdown = {version = "^0.1.3", extras = ["all"]}
docling = "2.61.2"
torch =      { version = "2.9.0+cpu",  source = "pytorch_cpu" }
torchvision = { version = "0.24.0+cpu", source = "pytorch_cpu" }
transformers = ">=4.53.3,<5.0.0"
pypandoc = ">=1.6.2"
pypandoc_binary = ">=1.6.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
coverage = "^7.8.0"
httpx = "^0.28.1"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
flake8-black = "^0.4.0"
flake8-pyproject = "^1.2.3"
flake8-quotes = "^3.4.0"
flake8-return = "^1.2.0"
flake8-annotations-complexity = "^0.1.0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^24.12.12"
flake8-builtins = "^2.5.0"
flake8-comprehensions = "^3.15.0"
flake8-eradicate = "^1.5.0"
flake8-expression-complexity = "^0.0.11"
flake8-pytest-style = "^2.1.0"
pep8-naming = "^0.15.1"
flake8-eol = "^0.0.8"
flake8-exceptions = "^0.0.1a0"
flake8-simplify = "^0.22.0"
flake8-wot = "^0.2.0"
flake8-function-order = "^0.0.5"
flake8-tidy-imports = "^4.10.0"
black = "^25.1.0"
flake8-logging-format = "^2024.24.12"
flake8-docstrings = "^1.7.0"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.14"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
pythonpath = "src"
testpaths = "src/tests"
