[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rag-core-api"
version = "v3.4.0"
description = "The rag-core-api contains the API layer for the RAG template for document retrieval, question answering, knowledge base management in the vector database and more."
packages = [{ include = "rag_core_api", from = "src" }]
authors = [
    "STACKIT GmbH & Co. KG <data-ai@stackit.cloud>",
]
maintainers = [
    "Andreas Klos <andreas.klos@stackit.cloud>",
]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/stackitcloud/rag-template"
homepage = "https://pypi.org/project/rag-core-api"

[tool.poetry.dependencies]
python = "^3.13"
rag-core-lib = { path = "../rag-core-lib", develop = true}
uvicorn = "^0.37.0"
langchain-qdrant = "^1.1.0"
dependency-injector = "^4.46.0"
fastapi = "^0.121.2"
requests-oauthlib = "^2.0.0"
qdrant-client = "^1.14.2"
deprecated = "^1.2.18"
datasets = "^3.5.1"
ragas = "^0.3.0"
flashrank = "^0.2.10"
pyyaml = "^6.0.2"
openai = "^1.77.0"
langgraph = "^1.0.3"
pillow = "^11.2.1"
langchain-ollama = "^1.0.0"
langchain-community = "^0.4.1"
fastembed = "^0.7.0"
langdetect = "^1.0.9"
langfuse = "^3.10.1"
langchain-text-splitters = "^1.0.0"
starlette = ">=0.49.1"
langgraph-checkpoint = ">=3.0.0,<4.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
coverage = "^7.8.0"
pytest-asyncio = "^0.26.0"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.14"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
flake8-black = "^0.4.0"
flake8-pyproject = "^1.2.3"
flake8-quotes = "^3.4.0"
flake8-return = "^1.2.0"
flake8-annotations-complexity = "^0.1.0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^24.12.12"
flake8-builtins = "^2.5.0"
flake8-comprehensions = "^3.15.0"
flake8-eradicate = "^1.5.0"
flake8-expression-complexity = "^0.0.11"
flake8-pytest-style = "^2.1.0"
pep8-naming = "^0.15.1"
flake8-eol = "^0.0.8"
flake8-exceptions = "^0.0.1a0"
flake8-simplify = "^0.22.0"
flake8-wot = "^0.2.0"
flake8-function-order = "^0.0.5"
flake8-tidy-imports = "^4.10.0"
black = "^25.1.0"
flake8-logging-format = "^2024.24.12"
flake8-docstrings = "^1.7.0"


[tool.flake8]
exclude= [".eggs", "src/rag_core_api/models", ".git", ".hg", ".mypy_cache", ".tox", ".venv", ".devcontainer", "venv", "_build", "buck-out", "build", "dist", "**/__init__.py"]
statistics = true
show-source = false
max-complexity = 8
max-annotations-complexity = 3
docstring-convention = 'numpy'
max-line-length = 120
ignore = ["E203", "W503", "E704"]
inline-quotes = '"'
docstring-quotes = '"""'
multiline-quotes = '"""'
dictionaries = ["en_US", "python", "technical", "pandas"]
ban-relative-imports = true
per-file-ignores = """
  ./src/rag_core_api/prompt_templates/*: E501,D100,
  ./src/rag_core_api/apis/rag_api.py: B008,WOT001,
  ./src/rag_core_api/impl/rag_api.py: B008,
  ./src/rag_core_api/prompt_templates/*: E501,
  ./src/rag_core_api/dependency_container.py: CCE002,CCE001,
  ./src/rag_core_api/apis/rag_api_base.py: WOT001,
  ./tests/rag_api_test.py: E402,S101,S105,I252,D409,
  ./tests/*: S101,S105,I252,D409,
"""

[tool.black]
line-length = 120
exclude = """
/(
     .eggs
    | .git
    | .hg
    | .mypy_cache
    | .nox
    | .pants.d
    | .tox
    | .venv
    | _build
    | buck-out
    | build
    | dist
    | node_modules
    | venv
)/
"""

[tool.isort]
profile = "black"
skip = ['.eggs', '.git', '.hg', '.mypy_cache', '.nox', '.pants.d', '.tox', '.venv', '_build', 'buck-out', 'build', 'dist', 'node_modules', 'venv']
skip_gitignore = true
known_local_folder = ["rag_core_api", "rag_core_lib"]

[tool.pylint]
max-line-length = 120

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
pythonpath = ["src", "tests"]
testpaths = ["tests"]
